cambios en colores y disposicion general de la pagina completa

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -1,5 +1,3 @@
-
-
 //mixins
 @mixin center-flex($direction: row,$main: center, $cross: center) {
     display: flex;
@@ -11,25 +9,32 @@
     width:100%;
     height: 100%;
 }
-//general 
+
+//variables
+$lightColor: #f3f3f4;
+$darkColor: #12130f;
+$firstColor: #C8871F;
+
+//general
+html{
+    scroll-behavior: smooth;
+}
 a{
     text-decoration: none;
     color: black;
 }
 
 //main styling
-
-.section {
-    min-height: 100vh;
+section{
+    height: 100%;
 }
-
 //navbar
 .nav-container {
-    position: absolute;
+    position: fixed;
     width: 100%;
     z-index: 10;
     @include center-flex();
-    background-color: #b8edff;
+    background-color: $darkColor;
     // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 3px );
 }
@@ -37,15 +42,33 @@ a{
     padding: 12px 0;
     @include center-flex(row, center,center);
     gap: 48px;
+    a {
+        color: $firstColor;
+    }
 }
 
-
+//portada
+.sect-portada {
+    background-color: $lightColor;
+}
+//indumentaria
+.sect-ind {
+    background-color: $firstColor;
+}
+//contacto
+.sect-contacto {
+    background-color: $darkColor;
+}
+//footer
+footer {
+    background-color: $darkColor;
+    color: $lightColor;
+}
 
 //MEDIA QUERYS
 
 @media screen and (max-width: 900px) {
     .nav-container {
-        position: fixed;
         bottom: 0;    
     }
     .nav-list {
