--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -52,6 +52,39 @@ section{
 //portada
 .sect-portada {
     background-color: $darkColor;
+    color: $lightColor;
+}
+.info-portada{
+   @include center-flex(column, flex-start , flex-start);
+   margin-left: 32px;
+   width: 701px;
+   p {
+    font-size: 150%;
+    margin: 10px 0px;
+   }
+}
+h1{
+    font-size: 420%;
+}
+.btn-portada {
+    align-self: center;
+    font-size: 150%;
+    color: $lightColor;
+    width: fit-content;
+    height: fit-content;
+    background-color: $firstColor;
+    border-radius: 5px;
+    margin-top: 120px;
+    padding: 12px;
+    box-shadow: 10px 10px 35px -15px $firstColor;
+}
+.img-portada {
+    width: 750px;
+    height: 700px;
+    box-shadow: 10px 10px 50px -20px rgba(214,214,214,0.75);
+    position: absolute;
+    right: 100px;
+    top: 10%;
 }
 //indumentaria
 .sect-ind {
@@ -63,7 +96,7 @@ section{
     height: 100%;
     position: absolute;
     background-color: $darkColorOpacity;
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(2px);
 }
 //contacto
 .sect-contacto {
@@ -110,6 +143,25 @@ section{
 footer {
     background-color: $darkColor;
     color: $lightColor;
+    @include center-flex(row, space-between, center);
+    padding: 0px 6px;
+    p {
+        margin: 0;
+        a {
+            color: $lightColor;
+            text-decoration: underline;
+        }
+    }
+}
+.footer-icons a{
+    font-size: 150%;
+    color: $lightColor;
+    > * {
+        padding-right: 5px;
+        // &:hover{
+        //     color: $firstColor;
+        // }
+    }
 }
 
 //MEDIA QUERYS
@@ -120,5 +172,9 @@ footer {
     }
     .nav-list {
         padding: 15px 0;
+    }
+    // indumentaria
+    .sect-ind{
+        background-image: url('../assets/images/responsive-ind-bkg.jpg');
     }
 }
