--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -36,7 +36,7 @@ section{
     width: 100%;
     z-index: 10;
     @include center-flex(row, flex-start, center);
-    padding-left: 80px;
+    padding-left: 40px;
     background-color: $darkColor;
     // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 3px );
@@ -95,7 +95,7 @@ h1{
 }
 .shadow-ind-bkg{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: absolute;
     background-color: $darkColorOpacity;
     backdrop-filter: blur(2px);
@@ -105,8 +105,9 @@ h1{
     min-height: calc(-45px + 100vh);
     display: flex;
     flex-flow: column;
+    // margin:0 0 0 40px;
     margin:0 40px;
-    width: 100%;
+    width: 95%;
     h2{
         color: $firstColor;
         font-size: 150%;
@@ -133,11 +134,10 @@ h1{
     transition: all 0.7s;
 }
 .activeCat {
-    // font-size: 120%;
     border-bottom: 3px solid $lightColor;
 }
 .ficha {
-    width: 100vw;
+    width: 100%;
     gap: 32px;
     flex: 1 1 auto;
     display: flex;
@@ -173,12 +173,12 @@ h1{
     flex: 1;
     color: $darkColor;
     h2{
-        margin-top: 24px;
+        margin-top: 0;
         font-size: 250%;
     }
 }
 .info-contacto {
-    @include center-flex(column, flex-start,flex-start)
+    @include center-flex(column, flex-start,flex-start);
 }
 .detalle-contacto {
     @include center-flex(column, flex-start,flex-start);
@@ -281,6 +281,7 @@ footer {
     }
     .ind-content{
         margin: 0;
+        width: 100%;
     }
     .ficha{
         flex-direction: column;
@@ -300,6 +301,9 @@ footer {
     // contacto
     .sect-contacto{
         flex-direction: column;
+        h2{
+            margin-top: 24px;
+        }
     }
     .contact-content{
         flex-direction: column;
