--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -104,16 +104,16 @@ h1{
     h2{
         color: $firstColor;
         font-size: 250%;
-        margin: 0 0 0 40px;
+        margin:0;
     }
  }
 
 .fichero {
     z-index: 5;
-    @include center-flex(column, flex-start, flex-start);
+    @include center-flex(row, flex-start, center);
     // width: 100%;
     color: $lightColor;
-    margin:15px 0 30px 40px;
+    margin:15px 0 10px 0;
     overflow: hidden
 }
 .categorias {
@@ -121,6 +121,7 @@ h1{
     gap: 32px;
     font-size: 1.2rem;
     overflow: hidden;
+    // width: 80%;
 }
 .indCatBtn{
     cursor: pointer;
@@ -132,27 +133,30 @@ h1{
 .ficha {
     width: 100%;
     gap: 32px;
+    margin:15px 0 30px 0;
     flex: 1 1 auto;
     display: flex;
+    height: 594px;
 }
 .prim-part{
     @include center-flex(column, flex-start, flex-start);
-    width: 63%;
+    width: 65%;
     img {
-        width: 100%;
-        aspect-ratio: 16/9;
+        height: 594px;
+        aspect-ratio: 3/2;
         object-fit: cover;
         box-shadow: 10px 10px 50px -20px rgba(214,214,214,0.75);
     }
 }
 .seg-part{
     @include center-flex(column, flex-start, flex-start);
-    width: 33%;
+    width: 50%;
     display: flex;
     gap: 32px;
     img {
         height: calc(50% - 16px);
-        width: 100%;
+        aspect-ratio: 3/2;
+        // width: 100%;
         object-fit: cover;
         box-shadow: 10px 10px 50px -20px rgba(214,214,214,0.75);
     }
@@ -239,6 +243,7 @@ footer {
         flex-direction: column;
         gap: 0;
         padding-bottom: 10vh;
+        height: auto;
     }
     .prim-part{
         width: 100%;
@@ -250,8 +255,8 @@ footer {
         gap: 0;
         width: 100%;
         img{
+            width: 50%;
             aspect-ratio: auto;
-            object-fit: cover;
         }
     }
     //contacto
@@ -340,5 +345,8 @@ footer {
     .seg-part{
         flex-direction: column;
         height: auto;
+        img{
+            width: 100%;
+        }
     }
 }
