--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -17,6 +17,8 @@ $firstColor: #C8871F;
 
 $darkColorOpacity: #12130fb1;
 
+$picSize: 35vw;
+$respSize: 40vw;
 //general
 html{
     scroll-behavior: smooth;
@@ -127,34 +129,61 @@ h1{
     @include center-flex(row, flex-start, center);
     color: $lightColor;
     margin:15px 0 10px 0;
-    overflow: hidden
+    overflow: hidden;
+    // gap: 12px;
+}
+.slider-cats{
+    display: flex;
+    width: 90%;
+    height: auto;
+    overflow: hidden;
+}
+.arrow{
+    display: none;
+    color: $lightColor;
+    font-size: 150%;
+    z-index: 5;
+    cursor: pointer;
+}
+.categorias-container {
+    width: 100%;
+    overflow: hidden;
+    display: flex;
 }
 .categorias {
     @include center-flex();
     gap: 32px;
     font-size: 1.2rem;
-    overflow: hidden;
+    transition: all 1s;
+    transform: translateX(0);
 }
-.indCatBtn{
+.indCat {
+    display: flex !important;
+    p{
+        padding-right: 32px;
+    }    
+}
+.indCat-btn{
+    // padding: 0 32px;
     cursor: pointer;
     transition: all 0.7s;
 }
 .activeCat {
-    border-bottom: 3px solid $lightColor;
+    color: $firstColor;
 }
 .ficha {
     width: 100%;
     gap: 32px;
-    margin:15px 0 30px 0;
+    margin:15px 0 50px 0;
     flex: 1 1 auto;
     display: flex;
-    height: 594px;
 }
 .prim-part{
     @include center-flex(column, flex-start, flex-start);
     width: 65%;
     img {
-        height: 594px;
+        // height: 594px;
+        height: $picSize;
         aspect-ratio: 3/2;
         object-fit: cover;
         box-shadow: 10px 10px 50px -20px rgba(214,214,214,0.75);
@@ -163,10 +192,12 @@ h1{
 .seg-part{
     @include center-flex(column, flex-start, flex-start);
     width: 50%;
+    height: $picSize;
     display: flex;
     gap: 32px;
     img {
         height: calc(50% - 16px);
+        // height: calc(35vw - 16px);
         aspect-ratio: 3/2;
         object-fit: cover;
         box-shadow: 10px 10px 50px -20px rgba(214,214,214,0.75);
@@ -236,6 +267,16 @@ footer {
 }
 
 //MEDIA QUERYS
+@media screen and (max-width: 1600px) {
+.prim-part{
+    img{
+        height: $respSize;
+    }
+}
+.seg-part{
+    height: $respSize;
+}
+}
 @media screen and (max-width: 1200px) {
     //portada
     .btn-portada{
@@ -254,6 +295,14 @@ footer {
     .ind-content{
         margin: 0;
         width: 100%;
+        h2{
+            width: 90%;
+            align-self: center;
+        }
+    }
+    .fichero{
+        width: 90%;
+        align-self: center;
     }
     .ficha{
         align-self: center;
@@ -266,15 +315,18 @@ footer {
     .prim-part{
         width: 100%;
         img{
+            height: auto;
+            width: 100%;
         }
     }
     .seg-part{
         flex-direction: row;
         gap: 0;
         width: 100%;
+        height: auto;
         img{
+            height: auto;
             width: 50%;
-            aspect-ratio: auto;
         }
     }
     //contacto
