--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -106,7 +106,7 @@ h1{
 }
 //indumentaria
 .sect-ind {
-    background-image: url('../assets/images/ind-bkg.jpg');
+    background-image: url('../assets/images/ind-bkg.webp');
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 0;
@@ -287,10 +287,7 @@ footer {
     }
     // indumentaria
     .sect-ind{
-        background-image: url('../assets/images/responsive-ind-bkg.jpg');
-    }
-    .sect-ind{
-        background-image: url('../assets/images/responsive-ind-bkg.jpg');
+        background-image: url('../assets/images/responsive-ind-bkg.webp');
     }
     .ind-content{
         margin: 0;
